fix: chart dark mode

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -7,5 +7,5 @@
 }
 
 .info-card {
-  @apply p-5 border border-dark-300 bg-dark-900 rounded-md;
+  @apply p-5 border border-dark-300 bg-dark-900 rounded-lg;
 }
